<resources>
    <string name="app_name">Menu Example</string>
    <string name="action_settings">Settings</string>
    <string name="action_list_view">List View</string>
    <string name="menu_item_text_notification">Notifications</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="click_me">Click me!</string>
</resources>
