<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cfbrownweb.chrisbrown.menuexample.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_view"
        android:orderInCategory="2"
        android:title="@string/action_list_view"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_notification"
        android:orderInCategory="3"
        android:title="@string/menu_item_text_notification"
        app:showAsAction="never"
        />
</menu>
